# clew

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.clew-eval/v3.0/: sanitization-prompt-template.md  scores.json  verification-report.md  viability_results.json
.clew-eval/v3.1/: feature_visibility.md  mapping.json  verification.md  viability_results.md
.clew-eval/v4/: calibration_analysis.md  (+4 more)
.clew-eval/v4.1/: mapping.json  viability_results.md  viability_test_plan.md
.clew-eval/v4.2/: assemble_scores.py  behavioral.json  verification-results.md  viability_results.md
.clew-eval/v4.2-beta/: calibration_final.json  calibration_gap_ratio.json  calibration_raw.json
.clew-eval/v4.3-beta/: calibration_clew_zscore.json  calibration_clew_zscore_final.json  calibration_evvy.json  calibration_evvy_zscore.json  calibration_evvy_zscore_final.json
clew/: __main__.py  cli.py  config.py  discovery.py  doctor.py  exceptions.py  factory.py  mcp_server.py  models.py  registry.py
code_search/: __main__.py  cli.py  config.py  exceptions.py  factory.py  mcp_server.py  models.py  safety.py
docs/: CLAUDE_CONTEXT_ANALYSIS.md  DESIGN.md  IMPLEMENTATION.md  PRODUCT-VISION.md  QUICKSTART.md  VIABILITY-EVALUATION-STANDARDS.md
homebrew/: clewdex.rb
npm/: README.md  package.json
scripts/: analyze_telemetry.py  assemble_scores.py  calibration_queries.py  calibration_queries_clew.py  counterfactual_analysis.py  enrich.py  extract_transcripts.py  run_eval.py  sanitize_transcripts.py  setup.sh  viability_compute.py
tests/: conftest.py
(+495 files in other folders)
